base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - port: 8888
    targetPort: 8888
  type: NodePort
